--- a/app/public/player/index.html
+++ b/app/public/player/index.html
@@ -11,9 +11,17 @@
 
 <body>
     <div class="container">
-        <h1>Color Battle App</h1>
-        <a href="/player" class="btn">Start</a>
+        <div class="flex">
+            <h2>Team:</h2>
+            <div id="teamColor"></div>
+        </div>
+        <a id="att-btn" class="btn">Attack</a>
+
+        <div id="win-message">
+          <p>You win</p>
+        </div>
     </div>
+    <script src="/player/player.js"></script>
 </body>
 
 </html>
