--- a/app/public/admin/index.html
+++ b/app/public/admin/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Minimlist chat App</title>
+    <title>Color Battle App - ADMIN</title>
 </head>
 
 <body>
-    <div class="container">
+    <div id="main" class="container">
         <h2>Admin</h2>
         <h4 id='redTitle'>Red</h4>
         <div class="progress-group">
@@ -28,6 +28,9 @@
         </div>
 
         <button id="reset">Reset</button>
+    </div>
+    <div id="notPermission">
+        <h1>Permission denied</h1>
     </div>
     <script src="/admin/admin.js"></script>
 </body>
