--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/logo.ico">
     <link rel="stylesheet" href="index.css">
     <title>Color Battle App</title>
 </head>
@@ -12,6 +13,7 @@
 <body>
     <div class="container">
         <h1>Color Battle App</h1>
+        <img src="/images/logo.png" alt="">
         <a href="/player" class="btn">Start</a>
     </div>
 </body>
