--- a/app/public/admin/index.html
+++ b/app/public/admin/index.html
@@ -24,7 +24,7 @@
             <p id="greenValue">0 clicks</p>
         </div>
 
-        <div id="win-message">
+        <div id="overlay">
           <p>You win</p>
         </div>
 
