--- a/app/public/player/index.html
+++ b/app/public/player/index.html
@@ -18,7 +18,7 @@
         </div>
         <a id="att-btn" class="btn">Attack</a>
 
-        <div id="win-message">
+        <div id="overlay">
           <p>You win</p>
         </div>
     </div>
