--- a/app/public/player/index.html
+++ b/app/public/player/index.html
@@ -16,7 +16,7 @@
             <h2>Team:</h2>
             <div id="teamColor"></div>
         </div>
-        <a id="att-btn" class="btn">Attack</a>
+        <button id="att-btn" class="btn">Attack</button>
 
         <div id="overlay">
           <p>You win</p>
