--- a/app/public/admin/index.html
+++ b/app/public/admin/index.html
@@ -32,6 +32,13 @@
             </div>
             <div id="qrcode" src="" alt="">
         </div>
+        <div id="max-score">
+            <h2>Set Max Score: </h2>
+            <div class="flex">
+                <h4>Max Score: </h4>
+                <input id="max-score-input" type="text">
+            </div>
+        </div>
 
         <div id="overlay">
           <p></p>
@@ -39,6 +46,7 @@
 
         <button id="reset" class="btn btn-sm">Reset game</button>
         <button id="set-ip-btn" class="btn btn-sm">Set ip</button>
+        <button id="set-max-score-btn" class="btn btn-sm">Set Max Score</button>
     </div>
     <div id="notPermission">
         <h1>Permission denied</h1>
