--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h1>Color Battle App</h1>
-        <img src="/images/logo.png" alt="">
+        <img id="baner-img" src="/images/logo.png" alt="">
         <a href="/player" class="btn">Start</a>
     </div>
 </body>
