--- a/app/public/admin/index.html
+++ b/app/public/admin/index.html
@@ -47,6 +47,7 @@
         <button id="reset" class="btn btn-sm">Reset game</button>
         <button id="set-ip-btn" class="btn btn-sm">Set ip</button>
         <button id="set-max-score-btn" class="btn btn-sm">Set Max Score</button>
+        <button id="pause-btn" class="btn btn-sm">Pause</button>
     </div>
     <div id="notPermission">
         <h1>Permission denied</h1>
