--- a/app/public/player/index.html
+++ b/app/public/player/index.html
@@ -17,6 +17,7 @@
             <div id="teamColor"></div>
         </div>
         <button id="att-btn" class="btn">Attack</button>
+        <button id="bonus-att-btn" class="btn btn-orange" hidden>Attack x 10</button>
 
         <div id="overlay">
           <p>You win</p>
