--- a/app/public/admin/index.html
+++ b/app/public/admin/index.html
@@ -16,14 +16,14 @@
         <h2>Teams scores</h2>
         <div id="teams" class="flex w-100">
             <div id="redTeamGroup" class="team-group">
-                <img src="../images/casle_red.png" alt="" class="w-100">
+                <img src="../images/army_red.png" alt="" class="w-100">
                 <div class="progress-group">
                     <progress id="redProg" value="0" max="100"></progress>
                 </div>
             </div>
             <div class="flex-grow-2"></div>
             <div id="greenTeamGroup" class="team-group">
-                <img src="../images/casle_green.png" alt="" class="w-100">
+                <img src="../images/army_green.png" alt="" class="w-100">
                 <div class="progress-group">
                     <progress id="greenProg" value="0" max="100" style="direction: rtl;"></progress>
                 </div>
