--- a/app/public/admin/index.html
+++ b/app/public/admin/index.html
@@ -14,16 +14,15 @@
     <div id="main" class="container">
         <h1>Admin Panel</h1>
         <h2>Teams scores</h2>
+        <img src="../images/army.png" alt="" class="w-100">
         <div id="teams" class="flex w-100">
             <div id="redTeamGroup" class="team-group">
-                <img src="../images/army_red.png" alt="" class="w-100">
                 <div class="progress-group">
                     <progress id="redProg" value="0" max="100"></progress>
                 </div>
             </div>
-            <div class="flex-grow-2"></div>
+            <div class="flex-grow-1"></div>
             <div id="greenTeamGroup" class="team-group">
-                <img src="../images/army_green.png" alt="" class="w-100">
                 <div class="progress-group">
                     <progress id="greenProg" value="0" max="100" style="direction: rtl;"></progress>
                 </div>
